Fixed the Alignment of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -8,7 +8,7 @@
 }
 .footer{
     width:100%;
-    margin-top: 45px;
+    margin-top: 87px;
     padding:7px 0;
     display:block;
     height:auto;
